--- a/css/custom.css
+++ b/css/custom.css
@@ -51,6 +51,7 @@ section[class*="scroll-block-"] h2 {
 	height: 85%;
 	background-attachment: fixed;
 	background-position: top;
+	max-width: 1530px;
 }
 
 #title {
@@ -91,7 +92,8 @@ section[class*="scroll-block-"] h2 {
 	background-image: url(/img/lena-river-delta.png);
 	height: 85%;
 	background-attachment: fixed;
-	background-position: center right;	
+	background-position: center right;
+	max-width: 1530px;	
 }
 
 #algeriaMid {
@@ -100,6 +102,7 @@ section[class*="scroll-block-"] h2 {
 	height: 85%;
 	background-attachment: fixed;
 	background-position: top;	
+	max-width: 1530px;
 }
 
 #lenaBottom {
@@ -107,6 +110,7 @@ section[class*="scroll-block-"] h2 {
 	background-position: center bottom;
 	height: 100%;
 	background-attachment: fixed;
+	max-width: 1530px;
 }
 
 .gallery-row {
