Update center right background
Center right background images were repeating on large high res screens. Shifted x position to avoid.

--- a/css/custom.css
+++ b/css/custom.css
@@ -92,7 +92,7 @@ section[class*="scroll-block-"] h2 {
 	background-image: url(/img/lena-river-delta.png);
 	height: 85%;
 	background-attachment: fixed;
-	background-position: center right;
+	background-position: center right 35%;
 	max-width: 1530px;	
 }
 
